--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -9,6 +9,7 @@ body{
     background: radial-gradient(circle at -4% -12.9%, rgb(55, 76, 119) 0.3%, rgb(30, 33, 48) 90.2%);
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
+    width: 100vw;
 }
 
 main{
@@ -104,4 +105,41 @@ main{
 button.estadoAtivo{
     background-color: rgb(183, 232, 255);
     cursor: cell;
+}
+
+
+/* Responsividade para telas muito pequenas */
+@media (max-width: 480px) {
+    main {
+        width: 300px;
+        height: 400px;
+        top: 15vh;
+    }
+
+    #visor {
+        width: 220px;
+        height: 50px;
+        padding: 8% 10px 0px 10px;
+        font-size: 24px;
+        left: 3%;
+        top: 2%;
+    }
+    #corpo{
+        padding-left: 10px;
+        top: 30%;
+    }
+    .button {
+        width: 47px;
+        height: 40px;
+        font-size: 1.2em;
+        margin: 5px;
+    }
+
+    #mais1 {
+        width: 50px;
+        height: 87px;
+        font-size: 1.5em;
+        right: 11%;
+        top: 37.5%;
+    }
 }
